tests/ui/parser/unicode-control-doc-comment-issue-153096.rs
//@ edition: 2024

#[allow(unused)]
/// РЂеОљРЂЕ, РЂеОЉРЂЕ, РЂеОњРЂЕ, РЂеОЊРЂЕ, РЂеОћРЂЕ
//~^ ERROR unicode codepoint changing visible direction of text present in doc comment
fn foo() {}

fn main() {}
